--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-form": "^0.1.1",
     "@radix-ui/react-hover-card": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.5",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.1",
     "firebase": "^11.2.0",
     "lucide-react": "^0.474.0",
+    "nanoid": "^5.0.9",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -34,7 +36,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
